bk_ida/gccida/c2/mark_set_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2962:54: error: must use 'enum' tag to refer to type 'rtx_code'
void  mark_set_1(  struct propagate_block_info *pbi, rtx_code code, rtx reg, rtx cond, rtx insn, int flags) 
                                                     ^
                                                     enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2980:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2982:4: error: expected ';' after expression
rtx mem_set_list; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2982:5: error: use of undeclared identifier 'mem_set_list'; did you mean 'reg_set_last'?
rtx mem_set_list; // rbx 
    ^~~~~~~~~~~~
    reg_set_last
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/rtl.h:1485:12: note: 'reg_set_last' declared here
extern rtx reg_set_last                 PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2983:4: error: expected ';' after expression
rtx v28; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2983:5: error: use of undeclared identifier 'v28'
rtx v28; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2985:6: error: use of undeclared identifier 'p_mem_set_list'
rtx *p_mem_set_list; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2987:6: error: use of undeclared identifier 'v32'
rtx *v32; // r13 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2988:4: error: expected ';' after expression
rtx v33; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2988:5: error: use of undeclared identifier 'v33'
rtx v33; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2990:4: error: expected ';' after expression
rtx v35; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2990:5: error: use of undeclared identifier 'v35'
rtx v35; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2992:6: error: use of undeclared identifier 'v37'
rtx *v37; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2994:4: error: expected ';' after expression
rtx v39; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2994:5: error: use of undeclared identifier 'v39'
rtx v39; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2995:4: error: expected ';' after expression
rtx v40; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:2995:5: error: use of undeclared identifier 'v40'
rtx v40; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:3001:6: error: use of undeclared identifier 'reg_next_use'
rtx *reg_next_use; // rsi 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/flow.c:3002:4: error: expected ';' after expression
rtx v47; // r12 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/mark_set_1/src/obj/flow.o] Error 1
